[tool.poetry]
name = "smarterlib"
version = "0.0.1"
description = "Client library to communicate with a SmarterMail server through it's API."
authors = ["Sébastien Riccio <sriccio@swisscenter.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
